# bazel-gcc-toolchain

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  defs.bzl
example/hello_world/: BUILD.bazel
scripts/: generate.py
toolchain/: BUILD.bazel  defs.bzl  versions.bzl
toolchain/bootlin_gcc/: BUILD.tmpl.bazel  defs.bzl  extension.bzl  versions.bzl  wrapper.sh
toolchain/crosstoolNG_gcc/: BUILD.bazel  BUILD.tmpl.bazel  defs.bzl  extension.bzl
toolchain/gcc/: BUILD  BUILD.bazel  BUILD.tmpl.bazel  cc_wrapper.sh  wrapper.sh
util/: README.md  generate_bootlin_versions.py
util/ct-ng/: .config  .gitignore  Dockerfile  README.md
