load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "buildifier_prebuilt",
    sha256 = "481f220bee90024f4e63d3e516a5e708df9cd736170543ceab334064fa773f41",
    strip_prefix = "buildifier-prebuilt-7.1.2",
    urls = [
        "http://github.com/keith/buildifier-prebuilt/archive/7.1.2.tar.gz",
    ],
)

load("@buildifier_prebuilt//:deps.bzl", "buildifier_prebuilt_deps")

buildifier_prebuilt_deps()

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()

load("@buildifier_prebuilt//:defs.bzl", "buildifier_prebuilt_register_toolchains")

buildifier_prebuilt_register_toolchains()

load("//toolchain:defs.bzl", "bootlin_toolchain")

bootlin_toolchain(
    name = "gcc_toolchain",
    arch = "x86-64",
    build_file = "//toolchain/gcc:BUILD.tmpl.bazel",
    integrity = "sha256-kygjypo+Bn5+KimBCmZtIMnMW7VQ3pR/aHnjis4aqVU=",
    variant = "x86-64--glibc--stable-2024.05-1",
    version = "13.3.0",
)

register_toolchains(
    "//toolchain:gcc",
)
