load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "buildifier_prebuilt",
    sha256 = "481f220bee90024f4e63d3e516a5e708df9cd736170543ceab334064fa773f41",
    strip_prefix = "buildifier-prebuilt-7.1.2",
    urls = [
        "http://github.com/keith/buildifier-prebuilt/archive/7.1.2.tar.gz",
    ],
)

load("@buildifier_prebuilt//:deps.bzl", "buildifier_prebuilt_deps")

buildifier_prebuilt_deps()

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()

load("@buildifier_prebuilt//:defs.bzl", "buildifier_prebuilt_register_toolchains")

buildifier_prebuilt_register_toolchains()

load("//toolchain:defs.bzl", "bootlin_toolchains")

bootlin_toolchains(
    "gcc_toolchain",
    cxx_flags = ["-std=c++17"],
)

register_toolchains(
    "//toolchain:gcc",
)
