load("@bazel_tools//tools/cpp:unix_cc_toolchain_config.bzl", "cc_toolchain_config")
load("@rules_cc//cc:defs.bzl", "cc_toolchain", "cc_toolchain_suite")

package(default_visibility = ["//visibility:public"])

cc_library(name = "empty_lib")

filegroup(
    name = "empty",
    srcs = [],
)

filegroup(
    name = "compiler_deps",
    srcs = glob(["**/*"]),
)

cc_toolchain(
    name = "cc_toolchain",
    all_files = ":compiler_deps",
    ar_files = ":compiler_deps",
    as_files = ":compiler_deps",
    compiler_files = ":compiler_deps",
    dwp_files = ":empty",
    linker_files = ":compiler_deps",
    module_map = None,
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_header_parsing = 1,
    supports_param_files = 1,
    toolchain_config = "gcc-@@VARIANT@@-config",
    toolchain_identifier = "gcc-@@VARIANT@@",
)

cc_toolchain_config(
    name = "gcc-@@VARIANT@@-config",
    abi_libc_version = "local",
    abi_version = "local",
    builtin_sysroot = "external/@@REPOSITORY@@/x86_64-unknown-linux-gnu/sysroot",
    compile_flags = [],  # REPLACE
    compiler = "gcc",
    conly_flags = [],
    coverage_compile_flags = ["--coverage"],
    coverage_link_flags = ["--coverage"],
    cpu = "@@ARCH@@",
    cxx_builtin_include_directories = [
        "%package(@@@REPOSITORY@@//)%/lib/gcc/x86_64-unknown-linux-gnu/@@VERSION@@/include",
        "%package(@@@REPOSITORY@@//)%/lib/gcc/x86_64-unknown-linux-gnu/@@VERSION@@/include-fixed",
        "%package(@@@REPOSITORY@@//)%/x86_64-unknown-linux-gnu/include",
        "%package(@@@REPOSITORY@@//)%/x86_64-unknown-linux-gnu/sysroot/usr/include",
        "%package(@@@REPOSITORY@@//)%/x86_64-unknown-linux-gnu/include/c++/@@VERSION@@",
        "%package(@@@REPOSITORY@@//)%/x86_64-unknown-linux-gnu/include/c++/@@VERSION@@/x86_64-unknown-linux-gnu",
        "%package(@@@REPOSITORY@@//)%/x86_64-unknown-linux-gnu/include/c++/@@VERSION@@/backward",
    ],
    cxx_flags = [],  # REPLACE
    dbg_compile_flags = [],  # REPLACE
    extra_flags_per_feature = {},
    host_system_name = "local",
    link_flags = [
        "-fuse-ld=gold",
        "-B/usr/bin",
        "-Wl,-no-as-needed",
        "-Wl,-z,relro,-z,now",
        "-pass-exit-codes",
    ],
    link_libs = [
        "-Wl,--push-state,-as-needed",
        "-lstdc++",
        "-Wl,--pop-state",
        "-Wl,--push-state,-as-needed",
        "-lm",
        "-Wl,--pop-state",
    ],
    opt_compile_flags = [],  # REPLACE
    opt_link_flags = ["-Wl,--gc-sections"],
    supports_start_end_lib = True,
    target_libc = "local",
    target_system_name = "x86_64-linux",
    tool_paths = {
        "ar": "bin/x86_64-unknown-linux-gnu-ar",
        "ld": "bin/x86_64-unknown-linux-gnu-ld",
        "llvm-cov": "None",
        "llvm-profdata": "None",
        "cpp": "bin/x86_64-unknown-linux-gnu-cpp",
        "gcc": "bin/x86_64-unknown-linux-gnu-gcc",
        "dwp": "bin/x86_64-unknown-linux-gnu-dwp",
        "gcov": "bin/x86_64-unknown-linux-gnu-gcov",
        "nm": "bin/x86_64-unknown-linux-gnu-nm",
        "objcopy": "bin/x86_64-unknown-linux-gnu-objcopy",
        "objdump": "bin/x86_64-unknown-linux-gnu-objdump",
        "strip": "bin/x86_64-unknown-linux-gnu-strip",
    },
    toolchain_identifier = "gcc-@@VARIANT@@",
    unfiltered_compile_flags = [
        "-fno-canonical-system-headers",
        "-no-canonical-prefixes",
        "-Wno-builtin-macro-redefined",
        "-D__DATE__=\"redacted\"",
        "-D__TIMESTAMP__=\"redacted\"",
        "-D__TIME__=\"redacted\"",
    ],
)

toolchain(
    name = "gcc_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:@@ARCH@@",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:@@ARCH@@",
    ],
    toolchain = ":cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
