load("@bazel_skylib//rules/directory:directory.bzl", "directory")
load("@bazel_skylib//rules/directory:subdirectory.bzl", "subdirectory")
load("@rules_cc//cc/toolchains:tool.bzl", "cc_tool")
load("@rules_cc//cc/toolchains:tool_map.bzl", "cc_tool_map")

filegroup(
    name = "compiler_deps",
    srcs = glob(
        ["**/*"],
        exclude = ["BUILD.bazel"],
    ),
)

directory(
    name = "root",
    srcs = [":compiler_deps"],
)

subdirectory(
    name = "sysroot",
    parent = ":root",
    path = "x86_64-unknown-linux-gnu/sysroot",
    visibility = ["//visibility:public"],
)

cc_tool(
    name = "ar",
    src = "bin/x86_64-unknown-linux-gnu-ar",
    data = [":compiler_deps"],
)

cc_tool(
    name = "asm",
    src = "bin/x86_64-unknown-linux-gnu-as",
    data = [":compiler_deps"],
)

cc_tool(
    name = "g++",
    src = "bin/x86_64-unknown-linux-gnu-g++",
    data = [":compiler_deps"],
)

cc_tool(
    name = "gcc",
    src = "bin/x86_64-unknown-linux-gnu-gcc",
    data = [":compiler_deps"],
)

cc_tool(
    name = "ldd",
    src = "bin/x86_64-unknown-linux-gnu-g++",
    data = [":compiler_deps"],
)

cc_tool(
    name = "objcopy",
    src = "bin/x86_64-unknown-linux-gnu-objcopy",
    data = [":compiler_deps"],
)

cc_tool(
    name = "strip",
    src = "bin/x86_64-unknown-linux-gnu-strip",
    data = [":compiler_deps"],
)

cc_tool_map(
    name = "tool_map",
    tools = {
        "@rules_cc//cc/toolchains/actions:ar_actions": ":ar",
        "@rules_cc//cc/toolchains/actions:assembly_actions": ":asm",
        "@rules_cc//cc/toolchains/actions:c_compile": ":gcc",
        "@rules_cc//cc/toolchains/actions:cpp_compile_actions": ":g++",
        "@rules_cc//cc/toolchains/actions:link_actions": ":ldd",
        "@rules_cc//cc/toolchains/actions:objcopy_embed_data": ":objcopy",
        "@rules_cc//cc/toolchains/actions:strip": ":strip",
    },
    visibility = ["//visibility:public"],
)
